--- a/helloingress.yaml
+++ b/helloingress.yaml
@@ -8,7 +8,7 @@ spec:
  rules:
  - http:
      paths:
-     - path: /hello/v1
+     - path: /v1/hello
        pathType: Prefix
        backend:
          service:
